# P6_Rehabilitation_Robotics

./: README.md  expanded.urdf
src/: geometric_full_parameters.csv
src/3_links_urdf_description/: README.md  package.xml  setup.py
src/3_links_urdf_description/launch/: display.launch.py  gazebo.launch.py
src/3_links_urdf_description/meshes/: FE_1.stl  RU_1.stl  SP_1.stl  base_link.stl
src/3_links_urdf_description/urdf/: complete_system_urdf.gazebo  complete_system_urdf.ros2control.xml  complete_system_urdf.xacro  materials.xacro
src/Admittance_controller/: README.md  package.xml  setup.py
src/Admittance_controller/Admittance_controller/: Command_pub.py  admittance_controller_node.py  admittance_to_servo_bridge.py  forces.py  joint_space_admittance_node.py
src/IK/: CMakeLists.txt  README.md
src/IK/src/: ik_damped_jacobian_node.cpp  orientation_ik_3r_node.cpp
src/bode_test/: package.xml  setup.cfg  setup.py
src/bode_test/bode_test/: bode_test_node.py
src/bode_test/config/: bode_test_ctc.yaml  bode_test_pipeline.yaml
src/bode_test/launch/: bode_test_ctc.launch.py  bode_test_pipeline.launch.py
src/calibration_pkg/: README.md
src/candle_ros2/CANdle-SDK/candlelib/src/communication_interface/: SPI.hpp
src/computed_torque_controller/: README.md  package.xml  setup.py
src/computed_torque_controller/computed_torque_controller/: controller_node.py  controller_node_kdl.py
src/computed_torque_controller/computed_torque_controller/dynamic_matrices/: B_Values.txt  C_Values.txt  Fc_Values.txt  G_Values.txt  Jm_Values.txt  M_Values.txt
src/computed_torque_controller/config/: controller_kdl.yaml
src/encoder_pkg/: README.md
src/ft300_ros2/: README.md  package.xml  setup.py
src/ft300_ros2/config/: ft300_calibration.json
src/ft300_ros2/ft300_ros2/: ft300_trajectory_calibration_node.py
src/ft_six_axis/: README.md  package.xml  setup.cfg  setup.py
src/ft_six_axis/ft_six_axis/: ft_sensor_node.py
src/ft_six_axis/launch/: ft_sensor.launch.py
src/mab_brake_chopper/: README.md
src/mab_brake_chopper/launch/: brake_chopper.launch.py
src/mab_brake_chopper/mab_brake_chopper/: brake_chopper_node.py  logic.py
src/mab_brake_chopper/test/: test_logic.py
src/mab_rehab/: README.md  package.xml
src/mab_rehab/config/: mab_three_axis.controllers.yaml  pid_tuning.yaml  safety_limits.yaml  startup_reference.yaml
src/mab_rehab/config/motors/: joint_1.cfg  joint_2.cfg  joint_3.cfg
src/mab_rehab/include/mab_rehab/: mab_system.hpp
src/mab_rehab/launch/: full_system_bringup.launch.py  full_system_bringup_v2.launch.py  mab_three_axis_bringup.launch.py
src/mab_rehab/src/: mab_system.cpp
src/mab_rehab/urdf/: mab_three_axis.urdf.xacro
src/mab_three_axis_sim/: CMakeLists.txt  README.md  package.xml
src/mab_three_axis_sim/config/: mab_three_axis_sim.controllers.yaml
src/mab_three_axis_sim/docs/: ADAPTING_TO_REAL_URDF_AND_CAD.md
src/mab_three_axis_sim/launch/: mab_three_axis_sim.launch.py
src/mab_three_axis_sim/rviz/: mab_three_axis_sim.rviz
src/mab_three_axis_sim/urdf/: mab_three_axis_sim.urdf.xacro
src/node_test/: package.xml  setup.cfg  setup.py
src/node_test/config/: step_test.yaml
src/node_test/launch/: step_test.launch.py
src/node_test/node_test/: step_test_node.py
src/scripts/: ft_configure_sensor.py  ft_read_factory_cal.py  ft_sensor_plot.py  send_trajectory.py
src/steve_moveit_config/: CMakeLists.txt  package.xml
src/steve_moveit_config/config/: complete_system_urdf.srdf  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  servo.yaml
src/steve_moveit_config/launch/: moveit_hardware.launch.py  moveit_sim.launch.py  servo.launch.py
src/wrist_games/: package.xml  setup.cfg  setup.py
src/wrist_games/launch/: airplane_game.launch.py  catcher_game.launch.py  game_manager.launch.py  jedi_game.launch.py  octagon_game.launch.py  pendulum_game.launch.py  tunnel_game.launch.py  wrist_games.launch.py  xwing_game.launch.py
src/wrist_games/wrist_games/: airplane_game.py  airplane_game_ui.py  airplane_node.py  calibration_node.py  calibration_ui.py  catcher_game.py  game_manager.py  game_node.py  game_ui.py  jedi_game.py  joint_state_bridge.py  octagon_game.py  pendulum_game.py  rom_utils.py  tunnel_game.py  xwing_game.py
src/wrist_games_interfaces/: CMakeLists.txt  package.xml
src/wrist_games_interfaces/srv/: SetDampingGain.srv  SetInertia.srv  SetReferenceJoint.srv  SetStiffness.srv  SetStiffnessScale.srv  StartAirplaneGame.srv  StartCalibration.srv  StartGame.srv
src/wrist_games_ros2/: README.md  package.xml  setup.cfg  setup.py
src/wrist_games_ros2/launch/: airplane_game.launch.py  catcher_game.launch.py  game_manager.launch.py  jedi_game.launch.py  octagon_game.launch.py  pendulum_game.launch.py  tunnel_game.launch.py  xwing_game.launch.py
src/wrist_games_ros2/resource/: wrist_games_ros2
src/wrist_games_ros2/wrist_games_ros2/: airplane_game.py  catcher_game.py  game_manager.py  jedi_game.py  octagon_game.py  pendulum_game.py  rom_utils.py  score_sound.py  tunnel_game.py  xwing_game.py
